--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
-
 <head>
+<meta charset="utf-8">
 <title>wavepot</title>
 <link rel="stylesheet" href="/wavepot.css">
 </head>
-
 <body>
-<!-- <div id="begin"><button>BEGIN</button></div> -->
 <div id="container"></div>
 <script type="importmap">
 {
@@ -18,15 +16,16 @@
 </script>
 <script type="module">
 window.DEBUG = true
-
 const debug = window.debug = {}
-
 import Wavepot from '/js/wavepot.js'
-
-const wavepot = debug.wavepot = new Wavepot({
-  el: container,
-  bpm: 140
-})
+const main = async () => {
+  await document.fonts.load('16px ProggyCleanTT')
+  const wavepot = debug.wavepot = new Wavepot({
+    el: container,
+    bpm: 140
+  })
+}
+main()
 </script>
 </body>
 
